

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
}

// ─────────────────────────────────────────────
// Enums
// ─────────────────────────────────────────────

enum Role {
  ADMIN
  OPERATOR
}

// ─────────────────────────────────────────────
// Models
// ─────────────────────────────────────────────

model User {
  id                    String    @id @default(uuid()) @db.Uuid
  email                 String    @unique @db.VarChar(255)
  password              String    @db.VarChar(255)
  firstName             String    @db.VarChar(100) @map("first_name")
  lastName              String    @db.VarChar(100) @map("last_name")
  role                  Role      @default(OPERATOR)
  // Refresh token — stocké hashé (bcrypt), null = pas de session active
  refreshTokenHash      String?   @map("refresh_token_hash")
  refreshTokenExpiresAt DateTime? @map("refresh_token_expires_at")
  createdAt             DateTime  @default(now()) @map("created_at")
  updatedAt             DateTime  @updatedAt @map("updated_at")

  @@map("users")
}
