generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
}

enum NotificationType {
  INFO
  WARNING
  SUCCESS
  ERROR
  TRAFFIC_ALERT
  INCIDENT_ALERT
}

model Notification {
  id        String           @id @default(uuid()) @db.Uuid
  title     String           @db.VarChar(120)
  message   String           @db.Text
  type      NotificationType @default(INFO)
  isRead    Boolean          @default(false) @map("is_read")
  userId    String?          @map("user_id") @db.Uuid
  createdAt DateTime         @default(now()) @map("created_at")
  updatedAt DateTime         @updatedAt @map("updated_at")

  @@index([userId])
  @@index([isRead])
  @@index([createdAt])
  @@map("notifications")
}
